--- a/index.css
+++ b/index.css
@@ -1,15 +1,6 @@
-/*body,
-html {
-	height: 100%;
-	background-repeat: no-repeat;
-	/*background-image: linear-gradient(rgb(12, 97, 33),rgb(104, 145, 162));
-	background: #1A1A1A;
-	position: relative;
-}
-*/
 #particles-js {
-	width: 100%;
-	height: 100%;
+	width: 95%;
+	height: 95%;
 	background-size: cover;
 	background-position: 50% 50%;
 	position: fixed;
@@ -18,14 +9,12 @@ html {
 	color: #230063;
 }
 
-/* version 1.0.1 */
-
 body {
-    margin: 0;
-    padding: 0;
-    background-color: #1A1A1A;
-    line-height: 1.5;
-    font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+	margin: 0;
+	padding: 0;
+	background-color: #1A1A1A;
+	line-height: 1.5;
+	font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
 	user-select: text;
 }
 
@@ -37,206 +26,206 @@ h5,
 h6,
 h7,
 h8 {
-    color: #B5E853;
-    line-height: 1.5;
-    font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
-    ;
-    text-align: left;
-    margin: 0 0 20px;
+	color: #B5E853;
+	line-height: 1.5;
+	font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+	;
+	text-align: left;
+	margin: 0 0 20px;
 }
 
 p {
-    color: #FFFFFF;
-    padding-left: 30px;
-    font-size: 15px;
-    font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
-    ;
+	color: #FFFFFF;
+	padding-left: 30px;
+	font-size: 15px;
+	font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+	;
 }
 
 .hr {
-    border: 0;
-    border-top: 2px dashed #B5E853;
+	border: 0;
+	border-top: 2px dashed #B5E853;
 }
 
 li {
-    color: #FFFFFF;
-    font-size: 15px;
-    font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
-    ;
+	color: #FFFFFF;
+	font-size: 15px;
+	font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+	;
 }
 
 .button {
-    text-decoration: none;
-    text-align: left;
-    background-color: #121212;
-    color: white;
-    border: 2px solid #000000;
-    border-radius: 15px;
-    padding: 10px 14px;
-    font-size: 14px;
-    display: inline-block;
-    padding-left: 10px;
+	text-decoration: none;
+	text-align: left;
+	background-color: #121212;
+	color: white;
+	border: 2px solid #000000;
+	border-radius: 15px;
+	padding: 10px 14px;
+	font-size: 14px;
+	display: inline-block;
+	padding-left: 10px;
 }
 
 blockquote {
-    border-left-style: dotted;
-    border-left-width: 1px;
-    border-left-color: gray;
-    color: #8D8D8D;
-    padding: 20px;
+	border-left-style: dotted;
+	border-left-width: 1px;
+	border-left-color: gray;
+	color: #8D8D8D;
+	padding: 20px;
 }
 
 td {
-    color: #FFFFFF;
-    border-spacing: 20px;
-    text-align: left;
-    padding: 8px;
+	color: #FFFFFF;
+	border-spacing: 20px;
+	text-align: left;
+	padding: 8px;
 }
 
 th {
-    color: #FFFFFF;
-    border-bottom: 1px dashed #B5E853;
-    text-align: left;
-    padding: 8px;
+	color: #FFFFFF;
+	border-bottom: 1px dashed #B5E853;
+	text-align: left;
+	padding: 8px;
 }
 
 dl {
-    color: #FFFFFF;
-    text-align: left;
-    padding: 5px;
+	color: #FFFFFF;
+	text-align: left;
+	padding: 5px;
 }
 
 dt {
-    color: #FFFFFF;
-    font-weight: bold;
+	color: #FFFFFF;
+	font-weight: bold;
 }
 
 .smallimg {
-    background-attachment: fixed;
-    background-position: left;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 250px;
-    height: 250px;
+	background-attachment: fixed;
+	background-position: left;
+	background-repeat: no-repeat;
+	background-size: cover;
+	width: 250px;
+	height: 250px;
 }
 
 .largeimg {
-    background-attachment: fixed;
-    background-position: left;
-    background-repeat: no-repeat;
-    background-size: cover;
-    max-width: 100%;
-    max-height: 100%;
-    display: block;
+	background-attachment: fixed;
+	background-position: left;
+	background-repeat: no-repeat;
+	background-size: cover;
+	max-width: 100%;
+	max-height: 100%;
+	display: block;
 }
 
 .horizontalscroll {
-    background-color: #242424;
-    font-style: italic;
-    overflow: auto;
-    white-space: nowrap;
-    color: #FFFFFF;
-    padding: 10px;
+	background-color: #242424;
+	font-style: italic;
+	overflow: auto;
+	white-space: nowrap;
+	color: #FFFFFF;
+	padding: 10px;
 }
 
 ul {
-    list-style: none;
+	list-style: none;
 }
 
 ul li::before {
-    content: ">>  ";
-    color: #B5E853;
+	content: ">>  ";
+	color: #B5E853;
 }
 
 ol {
-    display: table;
-    margin-left: 0;
-    margin-right: auto;
-    list-style-position: inside;
+	display: table;
+	margin-left: 0;
+	margin-right: auto;
+	list-style-position: inside;
 }
 
 /*  font style  */
 .bold {
-    font-weight: bold;
+	font-weight: bold;
 }
 
 .ital {
-    font-style: italic;
+	font-style: italic;
 }
 
 .oblique {
-    font-style: oblique;
+	font-style: oblique;
 }
 
 .overline {
-    text-decoration: overline;
+	text-decoration: overline;
 }
 
 .strickthrough {
-    text-decoration: line-through;
+	text-decoration: line-through;
 }
 
 .underline {
-    text-decoration: underline;
+	text-decoration: underline;
 }
 
 .keyword {
-    color: #E867E8;
-    border: 1px solid gray;
-    background-color: black;
-    padding: 2px 2px;
+	color: #E867E8;
+	border: 1px solid gray;
+	background-color: black;
+	padding: 2px 2px;
 }
 
 .linkk {
-    color: #6CBDEC;
-    text-decoration: underline;
+	color: #6CBDEC;
+	text-decoration: underline;
 }
 
 .w3-black,
 .w3-hover-black:hover {
-    color: #BAB9B9 !important;
-    background-color: #000 !important
+	color: #BAB9B9 !important;
+	background-color: #000 !important
 }
 
 /* margin for button */
 .leftmar {
-    margin-left: 30px;
+	margin-left: 30px;
 }
 
 /* font colour*/
 .gray {
-    color: #8D8D8D;
+	color: #8D8D8D;
 }
 
 .green {
-    color: #B5E853;
+	color: #B5E853;
 }
 
 /* padding */
 .topp {
-    padding-top: 10px;
+	padding-top: 10px;
 }
 
 .left {
-    padding-left: 30px
+	padding-left: 30px
 }
 
 .mediumsize {
-    font-size: 19px;
+	font-size: 19px;
 }
 
 .prettyprint {
-    background: black;
-    color: green;
-    overflow-x: auto;
-    overflow-wrap: break-word;
+	background: black;
+	color: green;
+	overflow-x: auto;
+	overflow-wrap: break-word;
 }
 
 a {
-    text-decoration: none;
-    /* Remove underline */
-    color: white;
-    /* Set text color to white */
+	text-decoration: none;
+	/* Remove underline */
+	color: white;
+	/* Set text color to white */
 }
 
 
@@ -252,9 +241,19 @@ a {
 	z-index: 9999;
 }
 
-#social{
-	text-align: left;
+#social {
+	word-wrap: break-word;
+	max-width: 100%;
 }
-#social a{
+
+#social a {
 	border: #FFFFFF;
+}
+
+@media (max-width: 768px) {
+	#text {
+		max-width: 95%;
+		word-wrap: break-word;
+		text-align: center;
+	}
 }
